# etl_sprint_5

./: .env  pyproject.toml  requirements.txt
postgres_to_es/: config.py  extract.py  indices.json  load.py  main.py  misc.py  models.py  state.json  state.py  transform.py
postgres_to_es/sql/: genre.sql  movies.sql  person.sql
