[tool.poetry]
name = "etl"
version = "0.1.0"
description = ""
authors = ["paveldemin <papyasishe@yandex.ru>"]

[tool.poetry.dependencies]
python = "^3.9"
pydantic = {extras = ["dotenv"], version = "^1.8.2"}
psycopg2-binary = "^2.9.1"
elasticsearch = "^7.15.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
